--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -20,5 +21,6 @@
         "prettier"
     ],
     "rules": {
+        "react/jsx-filename-extension": [1, {"extensions":  [".js", ".jsx"]}]
     }
 }
