--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watchAll": "jest --watchAll"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
