--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-to-print": "^2.14.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.9",
